add first idea of a better system, based on MD files

--- a/page.css
+++ b/page.css
@@ -22,25 +22,8 @@ h2, h3, h4, h5 {
     color:#121c7e;
 }
 
-#toc {
-    font-size: 1em;
+#toc *{
+    font-size: 1.2em;
 }
-#toc .h1 {
-    text-indent: .25in;
-}
-#toc .h2 {
-    text-indent: .5in;
-}
-#toc .h3 {
-    text-indent: .75in;
-}
-#toc .h4 {
-    text-indent: 1in;
-}
-#toc .h5 {
-    text-indent: 1.25in;
-}
-#toc .h6 {
-    text-indent: 1.5in;
-}
+
 
