--- a/page.css
+++ b/page.css
@@ -22,8 +22,14 @@ h2, h3, h4, h5 {
     color:#121c7e;
 }
 
-#toc *{
-    font-size: 1.2em;
+#toc {
+    font-size: 1.5em;
 }
+#toc em{
+    text-decoration: underline;
+    font-style: normal;
+    font-weight: bold;/* */
+}
+
 
 
